[27148] Split c.e.c.services (add c.e.c.services.rcp)